--- a/requirements.txt
+++ b/requirements.txt
@@ -86,6 +86,7 @@ pyparsing==3.2.3
 pypdf==5.8.0
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.0
 python-telegram-bot==22.0
 pytz==2024.2
